正面補正追加
