# app/models/requests/face_image_processing_request.py
@@ -9,6 +9,7 @@ class ExtensionType(Enum):
 class FaceImageProcessingRequest(BaseModel):
     content: str = Field(..., description="加工対象の顔画像")
     extension: ExtensionType = Field(..., description="画像拡張子")
+    use_angle_correction: bool = Field(..., description="顔の角度調整利用有無")
     use_brightness_adjustment_lm: bool = Field(..., description="明るさ調整機能利用有無")
     use_correction_lm: bool = Field(..., description="補正機能利用有無")
     use_resolution_lm: bool = Field(..., description="解像度機能利用有無")
